--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,183</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,607</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Cheackbox_radiobutton.Cheack_Toggle</td><td><a href="#m0">cheackBox</a></td><td rowspan="1">1753436766497</td><td rowspan="1">1710</td></tr><tr class="passedeven"><td><a href="#m1">getImageAttribute</a></td><td rowspan="1">1753436770144</td><td rowspan="1">123</td></tr><tr class="passedeven"><td><a href="#m2">radio</a></td><td rowspan="1">1753436768213</td><td rowspan="1">1926</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">slideBar_DropDown.slideBarDropdown</td><td><a href="#m0">handleDropDown</a></td><td rowspan="1">1753509817996</td><td rowspan="1">2999</td></tr><tr class="passedeven"><td><a href="#m1">slideBar</a></td><td rowspan="1">1753509815391</td><td rowspan="1">2598</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Cheackbox_radiobutton.Cheack_Toggle#cheackBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Cheackbox_radiobutton.Cheack_Toggle#getImageAttribute</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Cheackbox_radiobutton.Cheack_Toggle#radio</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">slideBar_DropDown.slideBarDropdown#handleDropDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">slideBar_DropDown.slideBarDropdown#slideBar</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
