--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\tdeep\AppData\Local\Temp\testng-eclipse-1160756215\testng-customsuite.xml</span>
+                    <span>C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--647525857\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="slideBar_DropDown.slideBarDropdown" class="method navigator-link" hash-for-method="handleDropDown">handleDropDown</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="slideBar_DropDown.slideBarDropdown" class="method navigator-link" hash-for-method="slideBar">slideBar</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="form.FormValidation" class="method navigator-link" hash-for-method="formValidation">formValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">slideBar_DropDown.slideBarDropdown</span>
+              <span class="class-name">form.FormValidation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="handleDropDown">
-                  </a> <!-- handleDropDown -->
-                  <span class="method-name">handleDropDown</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="slideBar">
-                  </a> <!-- slideBar -->
-                  <span class="method-name">slideBar</span>
+                  <a name="formValidation">
+                  </a> <!-- formValidation -->
+                  <span class="method-name">formValidation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\tdeep\AppData\Local\Temp\testng-eclipse-1160756215\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--647525857\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;slideBar_DropDown.slideBarDropdown&quot;/&gt;
+      &lt;class name=&quot;form.FormValidation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'handleDropDown')
-data.setCell(0, 2, 'slideBar_DropDown.slideBarDropdown')
-data.setCell(0, 3, 2999);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'slideBar')
-data.setCell(1, 2, 'slideBar_DropDown.slideBarDropdown')
-data.setCell(1, 3, 2598);
+data.setCell(0, 1, 'formValidation')
+data.setCell(0, 2, 'form.FormValidation')
+data.setCell(0, 3, 4700);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,22 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">slideBar_DropDown.slideBarDropdown</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">form.FormValidation</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">preCondition</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">slideBar</span>
-                <span class="method-start">4150 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">handleDropDown</span>
-                <span class="method-start">6755 ms</span>
+                <span class="method-name">formValidation</span>
+                <span class="method-start">4894 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">postCondition</span>
-                <span class="method-start">9765 ms</span>
+                <span class="method-start">9608 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
