--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--647525857\testng-customsuite.xml</span>
+                    <span>C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--2110745364\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="form.FormValidation" class="method navigator-link" hash-for-method="formValidation">formValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="audio_video.Audio_video" class="method navigator-link" hash-for-method="testAudio">testAudio</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="audio_video.Audio_video" class="method navigator-link" hash-for-method="testVideo">testVideo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">form.FormValidation</span>
+              <span class="class-name">audio_video.Audio_video</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="formValidation">
-                  </a> <!-- formValidation -->
-                  <span class="method-name">formValidation</span>
+                  <a name="testAudio">
+                  </a> <!-- testAudio -->
+                  <span class="method-name">testAudio</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testVideo">
+                  </a> <!-- testVideo -->
+                  <span class="method-name">testVideo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--647525857\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\tdeep\AppData\Local\Temp\testng-eclipse--2110745364\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;form.FormValidation&quot;/&gt;
+      &lt;class name=&quot;audio_video.Audio_video&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'formValidation')
-data.setCell(0, 2, 'form.FormValidation')
-data.setCell(0, 3, 4700);
+data.setCell(0, 1, 'testAudio')
+data.setCell(0, 2, 'audio_video.Audio_video')
+data.setCell(0, 3, 4807);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testVideo')
+data.setCell(1, 2, 'audio_video.Audio_video')
+data.setCell(1, 3, 3120);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +236,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">form.FormValidation</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">audio_video.Audio_video</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">preCondition</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">formValidation</span>
-                <span class="method-start">4894 ms</span>
+                <span class="method-name">testAudio</span>
+                <span class="method-start">6947 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testVideo</span>
+                <span class="method-start">11778 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">postCondition</span>
-                <span class="method-start">9608 ms</span>
+                <span class="method-start">14905 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
